--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,7 @@ body {
   background-color: #2c2447;
   margin-left: 500px;
 }
+@font-face {
+  font-family: pixel;
+  src: url("https://dl.dropboxusercontent.com/s/hsdwvz761xqphhb/pixel.ttf");
+}
